Fix the Gap in header Section

--- a/style.css
+++ b/style.css
@@ -39,12 +39,12 @@ p {
 }
 
 .header-section {
-    padding: 0 25%;
+    padding: 0 10%;
     display: flex;
     justify-content: center;
     padding: 0 50px;
     margin: 50px 0;
-    gap: 15px;
+    gap: 50px;
 }
 
 .intro .introduction h1 {
@@ -136,6 +136,9 @@ p {
 /* laptops */
 
 @media (max-width: 1024px) {
+    .header-section {
+        gap: 20px;
+    }
     /* body {
         padding: 0 5%;
     } */
@@ -213,7 +216,7 @@ p {
     @media (max-width: 640px) {
         .header-section {
             padding: 0 5%;
-            
+            gap: 5px;
         }
     }
 }
